# aws-lambda

./: .gitignore  README.md  app.py  locustfile.py  pyproject.toml  requirements.txt  setup.py
aws_cdk_lambda_asset/: zip_asset_code.py
aws_lambda/: aws_lambda_stack.py  orders_service.py  payment_service.py  stock_service.py  users_service.py
sam-app/.aws/: templates.json
sam-app/sam-app/hello_world/: app.py
services/hello/: lambda_function.py
services/items/: lambda_function.py
services/orders/checkout/: lambda_function.py
services/orders/create/: lambda_function.py
services/orders/find/: lambda_function.py
services/orders/item_add/: lambda_function.py
services/orders/item_remove/: lambda_function.py
services/orders/remove/: lambda_function.py
services/orders_create/: lambda_function.py
services/orders_find/: lambda_function.py
services/orders_item_add/: lambda_function.py
services/orders_item_remove/: lambda_function.py
services/orders_remove/: lambda_function.py
services/payment/cancel/: lambda_function.py
services/payment/pay/: lambda_function.py
services/payment_cancel/: lambda_function.py
services/stock_add/: lambda_function.py
services/stock_create/: lambda_function.py
services/stock_find/: lambda_function.py
services/stock_subtract/: lambda_function.py
services/users_create/: lambda_function.py
services/users_credit_add/: lambda_function.py
services/users_credit_subtract/: lambda_function.py
services/users_find/: lambda_function.py
services/users_remove/: lambda_function.py
(+10 files in other folders)
